# cartouche

./: .gitignore  AGENTS.md  CLAUDE.md  MIGRATIONS.REFERENCE.md  MIGRATIONS.md  README.md  cartouche-default.conf  cartouche.bat  cartouche.ps1  cartouche.py  cartouche.sh  config-default.txt  gamer-sidekick.py  plan.md  release.sh  requirements.txt  steamgriddb_cache.json  test_api.py
.claude/: AGENTS.README.md
.claude/agents/: emulator-config.md  gui-developer.md  metadata-enricher.md  pipeline-debugger.md  save-manager.md  steam-integration.md
.github/workflows/: release.yml  (+1 more)
cartouche-ui/: BACKLOG.md  Cargo.toml  README.md
cartouche-ui/src/: app.rs  main.rs
cartouche-ui/src/bridge/: config.rs  library.rs  mod.rs  models.rs
cartouche-ui/src/engine/: canvas.rs  input.rs  mod.rs  text.rs  theme.rs
lib/: __init__.py  api_keys.py  app.py  arch_migrator.py  config-default.txt  configurer.json  configurer.py  detector.py  enricher.py  init_dialog.py  manifest_writer.py  manifester.py  migrations.py  migrator.py  models.py  patcher.py  persister.py  pipeline.py  platform_info.py  retrofiter.py  save_paths_migrator.py  saver.py  scanner.py  steam_cleaner.py  steam_compat.py  steam_exporter.py  steam_helpers.py  steam_vdf.py  steamer.py
scripts/: backup.sh  inject_api_key.py
tests/: conftest.py  test_cartouche_config.py  test_configurer.py  test_detector.py  test_enricher.py  test_manifest_writer.py  test_migrator.py  test_models.py  test_patcher.py  test_save_paths_migrator.py  test_saver.py  test_scanner.py  test_steam_cleaner.py  test_steam_exporter.py
(+9 files in other folders)
